...
                    Icon(
                        Icons.Default.PlayArrow,
                        contentDescription = null,
                        modifier = Modifier.padding(end = 8.dp)
                    )
                    Text(
                        text = "Start Activity",
                        style = MaterialTheme.typography.labelLarge
                    )
                }
            } else {
                Card(
                    modifier = Modifier.fillMaxWidth(),
...
